[package]
name = "libtheseus"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
description = "The application-facing 'library' that exposes Theseus OS features, similar to a standard library."
edition = "2021"

[dependencies]
heap = { path = "../kernel/heap" }
# # defines eh_personality
# panic_entry = { path = "../kernel/panic_entry" }