[package]
name = "libtheseus"
version = "0.1.0"
description = "The application-facing 'library' that exposes Theseus OS features, similar to a standard library."
authors = ["Kevin Boos <kevinaboos@gmail.com>"]

[dependencies]

[dependencies.panic_entry]
path = "../kernel/panic_entry"

[dependencies.heap]
path = "../kernel/heap"
