[package]
name = "terminal_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
app_io = { path = "../../kernel/app_io" }
color = { path = "../../kernel/color" }
keycodes_ascii = { path = "../../libs/keycodes_ascii" }
log = "0.4.17"
shapes = { path = "../../kernel/shapes" }
shell = { path = "../shell_2", package = "shell_2" }
spawn = { path = "../../kernel/spawn" }
text_display = { path = "../../kernel/displayable/text_display" }
tty = { path = "../../kernel/tty" }
vte = "0.11.0"
window = { path = "../../kernel/window" }
window_manager = { path = "../../kernel/window_manager" }

[dependencies.core2]
version = "0.4.0"
default-features = false
features = ["alloc", "nightly"]
