[package]
name = "app_io_2"
version = "0.1.0"
edition = "2021"

[dependencies]
core2 = { version = "0.4.0", default-features = false, features = [
  "alloc",
  "nightly",
] }
hashbrown = "0.12"
keycodes_ascii = { path = "../../libs/keycodes_ascii" }
lazy_static = "1.4"
mutex_sleep = { path = "../mutex_sleep" }
task = { path = "../task" }
