[package]
name = "async_semaphore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpmc_queue = { path = "../../libs/mpmc_queue" }
spin = { path = "../../libs/sync_spin"}
semaphore = { path = "../../libs/sync_spin"}

[dev-dependencies.tokio]
version = "1.35.0"
default-features = false
features = ["rt"]
