[package]
name = "async_wait_queue"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@tsoutsman.com>"]
description = "An asynchronous wait queue"
edition = "2021"

[dependencies]
dreadnought = { path = "../dreadnought" }
mpmc_queue = { path = "../../libs/mpmc_queue" }
sync = { path = "../../libs/sync" }
sync_spin = { path = "../../libs/sync_spin" }
