[package]
name = "demand_paging"
version = "0.1.0"
edition = "2021"

[dependencies]
exceptions_full = { path = "../exceptions_full" }
hashbrown = "*"
irq_safety = { git = "https://github.com/theseus-os/irq_safety" }
memory = { path = "../memory" }
x86_64 = "0.14"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]
