[package]
name = "frame_allocator"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
description = "The allocator for physical memory frames"
edition = "2021"

[dependencies]
boot_info = { path = "../boot_info" }
kernel_config = { path = "../kernel_config" }
memory_structs = { path = "../memory_structs" }
page_allocator = { path = "../page_allocator" }
spin = "0.9.4"
