[package]
name = "net"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@tsoutsman.com>"]
description = "A generic network interface"
edition = "2021"

[dependencies]
nic_buffers = { path = "../nic_buffers" }

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = [
    "alloc",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
    "socket-icmp",
    "proto-ipv4",
    "proto-ipv6",
    # FIXME: Which medium?
    "medium-ip",
    "medium-ethernet",
]
