[package]
name = "net"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@tsoutsman.com>"]
description = "A generic network interface"
edition = "2021"

[dependencies]
log = "0.4.8"
nic_buffers = { path = "../nic_buffers" }
spin = "0.9.0"

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = [
    "alloc",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
    "socket-icmp",
    "proto-ipv4",
    "proto-ipv6",
    "medium-ethernet",
]
