[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "network_manager"
description = "A crate for managing network interfaces"
version = "0.1.0"

[dependencies]
spin = "0.9.0"
owning_ref = { git = "https://github.com/theseus-os/owning-ref-rs" }

[dependencies.log]
version = "0.4.8"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"

[dependencies.smoltcp]
version = "0.5.0"
default-features = false
features = [
    "alloc", "ethernet",
    # "log", "verbose", 
    "proto-ipv4", "proto-igmp", "proto-ipv6", "proto-dhcpv4",
    "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", 
]

[lib]
crate-type = ["rlib"]
