[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "panic_entry"
description = "Contains the lang items and entry points for panics and other errors/exceptions, as required by the Rust compiler."
version = "0.1.0"

[dependencies]


[dependencies.log]
version = "0.4.8"

[dependencies.memory]
path = "../memory"

[dependencies.mod_mgmt]
path = "../mod_mgmt"

[dependencies.vga_buffer]
path = "../vga_buffer"

[dependencies.panic_wrapper]
path = "../panic_wrapper"

[dependencies.unwind]
path = "../unwind"

[features]
# When building this as a dependency for std, we dont want to define a
# panic_handler or alloc_error_handler as they're defined in std.
std = []

[lib]
crate-type = ["rlib"]
