[package]
authors = ["Jacob Earle <earlejacobt@gmail.com>"]
name = "runqueue_priority"
description = "Run queue for the priority scheduler"
version = "0.1.0"

[dependencies.task]
path = "../task"

[dependencies.sync_preemption]
path = "../sync_preemption"

[dependencies.log]
version = "0.4.8"

[dependencies.atomic_linked_list]
path = "../../libs/atomic_linked_list"

[lib]
crate-type = ["rlib"]
