[package]
authors = ["Jacob Earle <earlejacobt@gmail.com>"]
name = "scheduler_priority"
description = "Provides a realtime scheduler based on Rate Monotonic scheduling"
version = "0.1.0"
edition = "2021"

[dependencies.log]
version = "0.4.8"

[dependencies.task]
path = "../task"

[dependencies.runqueue_priority]
path = "../runqueue_priority"

[lib]
crate-type = ["rlib"]
