[package]
name = "shell_2"
version = "0.1.0"
authors = ["Andrew Pham <apham727@gmail.com>", "Zhiyao Ma <zm16@pku.edu.cn>"]
description = "Shell that can run commands in application directory"
edition = "2021"


[dependencies]
core2 = { version = "0.4.0", default-features = false, features = [
  "alloc",
  "nightly",
] }
hashbrown = "0.12"
log = "0.4.8"

[dependencies.path]
path = "../path"

[dependencies.keycodes_ascii]
path = "../../libs/keycodes_ascii"

[dependencies.spawn]
path = "../spawn"

[dependencies.task]
path = "../task"

[dependencies.runqueue]
path = "../runqueue"

[dependencies.scheduler]
path = "../scheduler"

[dependencies.stdio]
path = "../../libs/stdio"

[dependencies.app_io]
path = "../app_io"

[dependencies.mutex_sleep]
path = "../mutex_sleep"
